--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,4 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+// Estilos personalizados para el calendario
+.calendar-tooltip {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
 
+.calendar-group:hover .calendar-tooltip {
+  opacity: 1 !important;
+}
